--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+test-report.*
+
 #############################################################################
 # Below from: https://github.com/github/gitignore/blob/master/Swift.gitignore
 #############################################################################
