--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,12 +8,11 @@ jobs:
   xcode-test:
     strategy:
       matrix:
-        # 11.3.1 = swift 5.1
         # 11.7 = swift 5.2
         # 12.4 = swift 5.3
         # 12.5 = swift 5.4 (not available because macos-11 is private preview, only on github)
         # Thanks: https://swiftly.dev/swift-versions and https://github.com/actions/virtual-environments/blob/main/images/macos/macos-11-Readme.md#xcode
-        xcode: ["11.3.1", "11.7", "12.4"]
+        xcode: ["11.7", "12.4"]
     runs-on: macos-10.15
     name: XCode macOS tests (xcode ${{ matrix.xcode }})
     # skip if '[skip ci]' exists in commit message 
@@ -25,7 +24,7 @@ jobs:
       with:
         xcode-version: ${{ matrix.xcode }}
 
-    # run command made with help from `fastlane scan`. Using `swift` 5.4 CLI `swift generate-xcodeproj` (may be deprecated now) generates an xcodeproj directory that fastlane scan requires. `scan` will output the command that it uses to run tests. 
+    # run command made with help from `fastlane scan`. Running `scan` will output the command that it uses to run tests that you can use for help constructing test command. 
     # `-scheme` name found by running: `xcrun xcodebuild -list`
     # `-destination` chosen to be a simulator that *all* xcode versions include. Help: https://github.com/actions/virtual-environments/blob/main/images/macos/macos-11-Readme.md#installed-simulators
     - name: Run tests (xcode ${{ matrix.xcode }})
@@ -49,13 +48,9 @@ jobs:
   
   spm-test:
     strategy:
-      # must use different OS for older swift versions. See: https://github.com/fwal/setup-swift/issues/196#issuecomment-810476279
       matrix: 
         swift: ["5.3", "5.4"]
         os: [ubuntu-latest]
-        include:
-        - swift: "5.2"
-          os: ubuntu-18.04
         # Can add `-arch X` to `swift build` command to compile for an architecture. Examples: -arch arm64, -arch x86_64
     runs-on: ${{ matrix.os }}
     name: SPM Linux tests (swift ${{ matrix.swift }})
@@ -69,9 +64,8 @@ jobs:
           swift-version: '${{ matrix.swift }}'
 
     # Must use `--parallel` to use `--xunit-output`. 
-    # `--enable-test-discovery` is for older Swift versions to work. 
     - name: Run tests (swift ${{ matrix.swift }})
-      run: swift test --parallel --xunit-output test-report.xml --enable-test-discovery
+      run: swift test --parallel --xunit-output test-report.xml
 
     - name: Upload test report 
       uses: actions/upload-artifact@v2
@@ -88,3 +82,4 @@ jobs:
         fail_on_failure: true 
         require_tests: true 
       if: ${{ always() }} # if running tests fails, we still want to parse the test results     
+      
