--- a/.github/workflows/deploy-sdk.yml
+++ b/.github/workflows/deploy-sdk.yml
@@ -22,5 +22,6 @@ jobs:
             @semantic-release/changelog@5
             @semantic-release/git@9
             @semantic-release/github@7
+            @semantic-release/exec@5
         env:
           GITHUB_TOKEN: ${{ secrets.REPO_PUSH_TOKEN }}
