--- a/.releaserc.json
+++ b/.releaserc.json
@@ -8,6 +8,9 @@
     "plugins": [
         "@semantic-release/commit-analyzer",
         "@semantic-release/release-notes-generator",        
+        ["@semantic-release/exec", {
+            "verifyReleaseCmd": "./update_version.sh ${nextRelease.version} Sources/Common/Version.swift"
+        }],
         ["@semantic-release/changelog",{
             "changelogFile": "CHANGELOG.md"
         }],
