--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,10 +9,11 @@ jobs:
     strategy:
       matrix:
         # 12.4 = swift 5.3
-        # 12.5 = swift 5.4 (not available because macos-11 is private preview, only on github)
+        # 12.5 = swift 5.4
+        # 13.0 = swift 5.5
         # Thanks: https://swiftly.dev/swift-versions and https://github.com/actions/virtual-environments/blob/main/images/macos/macos-11-Readme.md#xcode
-        xcode: ["12.4"]
-    runs-on: macos-10.15
+        xcode: ["12.4", "12.5", "13.0"]
+    runs-on: macos-11
     name: XCode macOS tests (xcode ${{ matrix.xcode }})
     # skip if '[skip ci]' exists in commit message 
     if: ${{ !contains(format('{0} {1}', github.event.head_commit.message, github.event.pull_request.title), '[skip ci]') }}
@@ -22,12 +23,15 @@ jobs:
       uses: maxim-lobanov/setup-xcode@v1
       with:
         xcode-version: ${{ matrix.xcode }}
+    # If running tests fails, sometimes it's because of scheme name is wrong. This gives us all available schemes. 
+    - name: Get XCode schemes (xcode ${{ matrix.xcode }})
+      run: xcrun xcodebuild -list
 
     # run command made with help from `fastlane scan`. Running `scan` will output the command that it uses to run tests that you can use for help constructing test command. 
-    # `-scheme` name found by running: `xcrun xcodebuild -list`
+    # `-scheme` name found by running: `xcrun xcodebuild -list` (or, see output of workflow run)
     # `-destination` chosen to be a simulator that *all* xcode versions include. Help: https://github.com/actions/virtual-environments/blob/main/images/macos/macos-11-Readme.md#installed-simulators
     - name: Run tests (xcode ${{ matrix.xcode }})
-      run: xcrun xcodebuild -scheme Customer.io -destination 'platform=iOS Simulator,name=iPhone 8' build test | xcpretty  --report html --output 'test-report.html' --report junit --output 'test-report.xml'
+      run: xcrun xcodebuild -scheme Customer.io-Package -destination 'platform=iOS Simulator,name=iPhone 8' build test | xcpretty  --report html --output 'test-report.html' --report junit --output 'test-report.xml'
 
     - name: Upload test report 
       uses: actions/upload-artifact@v2
