ci: commit version file changes on deploy

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -11,10 +11,12 @@
         ["@semantic-release/exec", {
             "verifyReleaseCmd": "./update_version.sh ${nextRelease.version} Sources/Tracking/Version.swift"
         }],
-        ["@semantic-release/changelog",{
+        ["@semantic-release/changelog", {
             "changelogFile": "CHANGELOG.md"
         }],
-        "@semantic-release/git",
+        ["@semantic-release/git", {
+            "assets": ["CHANGELOG.md", "Sources/Tracking/Version.swift"]
+        }],
         "@semantic-release/github"
     ]
 }
