scripts to deploy cocoapods

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -9,13 +9,13 @@
         "@semantic-release/commit-analyzer",
         "@semantic-release/release-notes-generator",        
         ["@semantic-release/exec", {
-            "verifyReleaseCmd": "./update_version.sh ${nextRelease.version} Sources/Tracking/Version.swift"
+            "verifyReleaseCmd": "./scripts/update_version.sh ${nextRelease.version} Sources/Tracking/Version.swift && ./scripts/update-version-cocoapods.sh ${nextRelease.version}"
         }],
         ["@semantic-release/changelog", {
             "changelogFile": "CHANGELOG.md"
         }],
         ["@semantic-release/git", {
-            "assets": ["CHANGELOG.md", "Sources/Tracking/Version.swift"]
+            "assets": ["CHANGELOG.md", "Sources/Tracking/Version.swift", "*.podspec"]
         }],
         "@semantic-release/github"
     ]
