--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -8,6 +8,7 @@ jobs:
     name: Promote a branch to the next release 
     runs-on: ubuntu-latest 
     steps:
+      - uses: actions/checkout@v2
       - name: Prepare to promote 
         run: |
           git config user.email "frontend@customer.io"
