--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,6 +42,7 @@ jobs:
     - name: Upload code coverage report 
       uses: codecov/codecov-action@v2
       with: 
+        token: ${{ secrets.CODECOV_UPLOAD_TOKEN }} # not required for public repos, but sometimes uploads fail without it so include it anyway
         verbose: true 
         directory: .build/generated
 
