test build on ci

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
         # 12.5 = swift 5.4
         # 13.0 = swift 5.5
         # Thanks: https://swiftly.dev/swift-versions and https://github.com/actions/virtual-environments/blob/main/images/macos/macos-11-Readme.md#xcode
-        xcode: ["13.0"]
+        xcode: ["12.4", "12.5", "13.0"]
     runs-on: macos-11
     name: XCode macOS tests (xcode ${{ matrix.xcode }})
     steps:
