--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -63,39 +63,42 @@ jobs:
         require_tests: true 
       if: ${{ always() }} # if running tests fails, we still want to parse the test results     
   
-  spm-test:
-    strategy:
-      matrix: 
-        swift: ["5.3", "5.4"]
-        os: [ubuntu-latest]
-        # Can add `-arch X` to `swift build` command to compile for an architecture. Examples: -arch arm64, -arch x86_64
-    runs-on: ${{ matrix.os }}
-    name: SPM Linux tests (swift ${{ matrix.swift }})
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Swift
-      uses: fwal/setup-swift@v1
-      with:
-          swift-version: '${{ matrix.swift }}'
+  # With the introduction of having the Gist iOS SDK as a dependency in our SDK, we can no longer provide any building or testing for our SDK 
+  # on Linux with Swift. This is because the Gist iOS SDK only supports iOS and does not compile on Linux. 
+  # 
+  # spm-test:
+  #   strategy:
+  #     matrix: 
+  #       swift: ["5.3", "5.4"]
+  #       os: [ubuntu-latest]
+  #       # Can add `-arch X` to `swift build` command to compile for an architecture. Examples: -arch arm64, -arch x86_64
+  #   runs-on: ${{ matrix.os }}
+  #   name: SPM Linux tests (swift ${{ matrix.swift }})
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #   - name: Set up Swift
+  #     uses: fwal/setup-swift@v1
+  #     with:
+  #         swift-version: '${{ matrix.swift }}'
 
-    # Must use `--parallel` to use `--xunit-output`. 
-    # `--enable-test-discovery` is for older Swift versions to work. Should be able to move when min SDK is 5.4
-    - name: Run tests (swift ${{ matrix.swift }})
-      run: swift test --parallel --xunit-output test-report.xml --enable-test-discovery
+  #   # Must use `--parallel` to use `--xunit-output`. 
+  #   # `--enable-test-discovery` is for older Swift versions to work. Should be able to move when min SDK is 5.4
+  #   - name: Run tests (swift ${{ matrix.swift }})
+  #     run: swift test --parallel --xunit-output test-report.xml --enable-test-discovery
 
-    - name: Upload test report 
-      uses: actions/upload-artifact@v2
-      with:      
-        name: spm-test-report
-        path: test-report.*
-      if: ${{ always() }}
-    - name: Publish test results
-      uses: mikepenz/action-junit-report@v2      
-      with:
-        check_name: SPM Linux tests (swift ${{ matrix.swift }}) - Results 
-        report_paths: test-report.xml
-        github_token: ${{ secrets.READ_ONLY_BOT_TOKEN }}
-        fail_on_failure: true 
-        require_tests: true 
-      if: ${{ always() }} # if running tests fails, we still want to parse the test results     
+  #   - name: Upload test report 
+  #     uses: actions/upload-artifact@v2
+  #     with:      
+  #       name: spm-test-report
+  #       path: test-report.*
+  #     if: ${{ always() }}
+  #   - name: Publish test results
+  #     uses: mikepenz/action-junit-report@v2      
+  #     with:
+  #       check_name: SPM Linux tests (swift ${{ matrix.swift }}) - Results 
+  #       report_paths: test-report.xml
+  #       github_token: ${{ secrets.READ_ONLY_BOT_TOKEN }}
+  #       fail_on_failure: true 
+  #       require_tests: true 
+  #     if: ${{ always() }} # if running tests fails, we still want to parse the test results     
       
