--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,6 +1,13 @@
 # Rules: https://realm.github.io/SwiftLint/rule-directory.html
+# Config file learn more: https://github.com/realm/SwiftLint#configuration=
 
-excluded: # paths to ignore during linting. Takes precedence over `included`.  
+excluded: # paths or files to ignore during linting. Takes precedence over `included`.  
   - .build
   - Package.swift
+    
+line_length:
+  ignores_comments: true
+  ignores_interpolated_strings: true
+  ignores_urls: true
+
 reporter: "emoji" # reporter type (xcode, json, csv, checkstyle, codeclimate, junit, html, emoji, sonarqube, markdown, github-actions-logging)
