ci: install swift 5.5 and 5.6 in CI testing

--- a/.github/workflows/deploy-cocoapods.yml
+++ b/.github/workflows/deploy-cocoapods.yml
@@ -19,7 +19,7 @@ env:
 jobs:
   deploy-cocoapods:
     name: Deploy SDK to Cocoapods 
-    runs-on: macos-latest
+    runs-on: macos-12
     steps:
       - uses: actions/checkout@v2
       - name: Checkout existing tag if manually running CI task  
