--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,9 +11,10 @@ jobs:
         # 12.4 = swift 5.3
         # 12.5 = swift 5.4
         # 13.0 = swift 5.5
-        # Thanks: https://swiftly.dev/swift-versions and https://github.com/actions/virtual-environments/blob/main/images/macos/macos-11-Readme.md#xcode
-        xcode: ["12.4", "12.5", "13.0"]
-    runs-on: macos-11
+        # 13.3 = swift 5.6
+        # Thanks: https://swiftly.dev/swift-versions and https://github.com/actions/virtual-environments/blob/main/images/macos/macos-12-Readme.md#xcode
+        xcode: ["12.4", "12.5", "13.0", "13.3"]
+    runs-on: macos-12
     name: XCode macOS tests (xcode ${{ matrix.xcode }})
     steps:
     - uses: actions/checkout@v2
@@ -66,7 +67,7 @@ jobs:
   spm-test:
     strategy:
       matrix: 
-        swift: ["5.3", "5.4"]
+        swift: ["5.3", "5.4", "5.5", "5.6"]
         os: [ubuntu-latest]
         # Can add `-arch X` to `swift build` command to compile for an architecture. Examples: -arch arm64, -arch x86_64
     runs-on: ${{ matrix.os }}
