refactor: create 1 shared DI graph

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,10 +1,13 @@
 # Rules: https://realm.github.io/SwiftLint/rule-directory.html
+# Config file learn more: https://github.com/realm/SwiftLint#configuration=
 
-included: # paths to include during linting. `--path` is ignored if present.
-  - Sources
-reporter: "emoji" # reporter type (xcode, json, csv, checkstyle, codeclimate, junit, html, emoji, sonarqube, markdown, github-actions-logging)
-
+excluded: # paths or files to ignore during linting. Takes precedence over `included`.  
+  - .build
+  - Package.swift
+    
 line_length:
   ignores_comments: true
   ignores_interpolated_strings: true
   ignores_urls: true
+
+reporter: "emoji" # reporter type (xcode, json, csv, checkstyle, codeclimate, junit, html, emoji, sonarqube, markdown, github-actions-logging)
