--- a/.github/workflows/deploy-git-tag.yml
+++ b/.github/workflows/deploy-git-tag.yml
@@ -10,9 +10,18 @@ jobs:
   deploy-sdk:
     name: Deploy git tag
     runs-on: ubuntu-latest
-    steps:
+    steps:    
       - name: semantic-release setup
         uses: levibostian/action-semantic-release-justwork@v1
+      
+      # Semantic-release tool is used to:
+      # 1. Determine the next semantic version for the software during deployment. 
+      #    For example, if the last deployment you made was version 1.3.5 and you are releasing a new feature 
+      #    in this deployment, semantic release will automatically determine the version is 1.4.0 for this new release you're doing. 
+      #    Semantic release is able to do this by viewing commit messages since the last release. That's why this project uses a 
+      #    specific commit message format during pull requests.
+      # 2. Updates metadata files. Such as updating the version number in package.json and adding entries to CHANGELOG.md file. 
+      # 3. Create git tag and push it to github. 
       - name: Deploy git tag via semantic-release 
         uses: cycjimmy/semantic-release-action@v2
         id: semantic-release
@@ -27,26 +36,51 @@ jobs:
             @semantic-release/exec@6
         env:
           # Needs to push git commits to repo. Needs write access. 
+          # github access token to Ami CI shared github account. 
+          # token scoped to just public repositories and is added as a collaborator to the project so it can push code. 
           GITHUB_TOKEN: ${{ secrets.WRITE_ACCESS_BOT_TOKEN }}
           
+      # This step is required before the action-sync-branches step as a merge commit might be made. 
       - name: Prepare to sync branches 
+        # user.email is a private email address. This is required by GitHub or we will not be able to push commits to github. 
+        # Find private email address that github uses for CI account at: https://github.com/settings/emails        
         run: |
-          git config user.email "frontend@customer.io"
-          git config user.name "Ami CI"
+          git config --global user.email "21171259+ami-ci@users.noreply.github.com"
+          git config --global user.name "Ami CI" 
+        
+      # After a production deployment of the software, the 'main' branch will contain some commits in it that 'develop'
+      # branch does not contain. These commits in 'main' are from all of the alpha, beta, and production deployments made. 
+      # We need these commits to be merged into 'develop'. If we do not, semantic-release tool will error. The tool requires
+      # git commits and git tags to be in the current branch in order to determine the next semantic version of the software. 
       - name: Copy commits into develop after main deployment 
         uses: levibostian/action-sync-branches@v1
         with:
           behind: develop
           ahead: main 
+          # github access token to Ami CI shared github account. 
+          # token scoped to just public repositories and is added as a collaborator to the project so it can push code. 
           githubToken: ${{ secrets.WRITE_ACCESS_BOT_TOKEN }}
 
       - name: Notify team of git tag being created 
-        uses: openhousepvt/slack@v1.3.2
-        if: steps.semantic-release.outputs.new_release_published == 'true'
+        uses: slackapi/slack-github-action@v1.18.0        
+        if: steps.semantic-release.outputs.new_release_published == 'true' # only run if a git tag was made. 
         with:
-          status: 'success' 
-          version: ${{ steps.semantic-release.outputs.new_release_version }}
-          platform: 'iOS SDK - Swift Package Manager deployed + git tag created'
-          channel: '#squad-mobile'
+          # Use block kit for format of the JSON payloads: https://app.slack.com/block-kit-builder
+          payload-file-path: ".github/slack-payloads/deploy_git_tag_success.json"
         env:
+          # Incoming webhook URL that sends message into the correct Slack channel. 
+          # Help on how to get the webhook URL: https://github.com/marketplace/actions/slack-send#setup-2
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_NOTIFY_RELEASES_WEBHOOK_URL }}
+          SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
+      
+      - name: Notify team of failure 
+        uses: slackapi/slack-github-action@v1.18.0
+        if: ${{ failure() }} # only run this if any previous step failed 
+        with:
+          # Use block kit for format of the JSON payloads: https://app.slack.com/block-kit-builder
+          payload-file-path: ".github/slack-payloads/deploy_git_tag_fail.json"
+        env:
+          # Incoming webhook URL that sends message into the correct Slack channel. 
+          # Help on how to get the webhook URL: https://github.com/marketplace/actions/slack-send#setup-2
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_NOTIFY_RELEASES_WEBHOOK_URL }}
+          SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK  
