add deploy script

--- a/.github/workflows/deploy-cocoapods.yml
+++ b/.github/workflows/deploy-cocoapods.yml
@@ -31,6 +31,8 @@ jobs:
           ref: ${{ github.event.inputs.tagToPush }}
       - name: Install cocoapods 
         run: gem install cocoapods 
+      - name: Push CustomerIOCommon
+        run: ./scripts/push-cocoapod.sh CustomerIOCommon.podspec
       - name: Push CustomerIOTracking 
         run: ./scripts/push-cocoapod.sh CustomerIOTracking.podspec
       - name: Push CustomerIOMessagingPush 
